[gd_scene load_steps=7 format=2]

[ext_resource path="res://Out of sight.tres" type="Material" id=1]
[ext_resource path="res://GUI/LifeBar.gd" type="Script" id=2]
[ext_resource path="res://GUI/AR theme.theme" type="Theme" id=3]
[ext_resource path="res://Smallest font (8 pixels).tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxFlat" id=1]
resource_local_to_scene = true
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0, 0, 0 )
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id=2]

[node name="LifeBar" type="Control"]
light_mask = 2
material = ExtResource( 1 )
mouse_filter = 2
script = ExtResource( 2 )

[node name="BackgroundProgressBar" type="ProgressBar" parent="."]
light_mask = 2
use_parent_material = true
margin_right = 40.0
margin_bottom = 10.0
rect_min_size = Vector2( 40, 10 )
theme = ExtResource( 3 )
custom_styles/fg = SubResource( 1 )
min_value = -14.0
step = 1.0
value = 100.0
percent_visible = false

[node name="Tween" type="Tween" parent="BackgroundProgressBar"]

[node name="ProgressBar" type="ProgressBar" parent="."]
light_mask = 2
use_parent_material = true
margin_right = 40.0
margin_bottom = 10.0
rect_min_size = Vector2( 40, 10 )
theme = ExtResource( 3 )
custom_styles/bg = SubResource( 2 )
min_value = -14.0
step = 1.0
value = 100.0
percent_visible = false

[node name="Values" type="Label" parent="."]
visible = false
light_mask = 2
use_parent_material = true
margin_left = 45.0
margin_right = 74.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )
custom_fonts/font = ExtResource( 4 )
text = "-14/100"
[connection signal="mouse_entered" from="ProgressBar" to="." method="_on_ProgressBar_mouse_entered"]
[connection signal="mouse_exited" from="ProgressBar" to="." method="_on_ProgressBar_mouse_exited"]
